crates/airpulse_dsl-evaluator/tests/snapshots/golden_pipeline__g07_sarif.snap
---
source: crates/airpulse_dsl-evaluator/tests/golden_pipeline.rs
assertion_line: 299
expression: to_sarif(&eng.snapshot())
---
{"version":"2.1.0","$schema":"https://json.schemastore.org/sarif-2.1.0.json","runs":[{"tool":{"driver":{"name":"adgl"}},"results":[]}]}
