crates/airpulse_dsl-evaluator/tests/snapshots/golden_pipeline__g07_snapshot.snap
---
source: crates/airpulse_dsl-evaluator/tests/golden_pipeline.rs
assertion_line: 298
expression: snap
---
Snapshot {
    causes: [
        CauseView {
            scope: ScopeId {
                scope_type: AccessPoint,
                key: 14372956353505031010,
            },
            kind: CauseKind(
                "RfInterference",
            ),
            target: ScopeId {
                scope_type: AccessPoint,
                key: 14372956353505031010,
            },
            time: EventTime(
                40000,
            ),
            confidence: Confidence(
                40,
            ),
        },
    ],
    problems: [],
    audit: [
        AuditEntry {
            code: Some(
                "ADGL3001",
            ),
            intent: ActionIntent {
                kind: RequestObservation,
                rule: RuleId(
                    "ap_deauth_missing_rf",
                ),
                arg: Some(
                    Symbol(
                        "wifi.rf_metrics",
                    ),
                ),
                target: Some(
                    ScopeId {
                        scope_type: AccessPoint,
                        key: 14372956353505031010,
                    },
                ),
                target_path: Some(
                    MetricPath(
                        "storm.target",
                    ),
                ),
                reason: None,
                evidence: [],
                causes: None,
            },
            wm: EventTime(
                45001,
            ),
        },
    ],
}
