crates/airpulse_dsl-evaluator/tests/snapshots/golden_pipeline__g08_sarif.snap
---
source: crates/airpulse_dsl-evaluator/tests/golden_pipeline.rs
expression: to_sarif(&eng.snapshot())
---
{"version":"2.1.0","$schema":"https://json.schemastore.org/sarif-2.1.0.json","runs":[{"tool":{"driver":{"name":"adgl"}},"results":[{"ruleId":"ap_ambiguous","level":"warning","message":{"text":"AmbiguousDiagnosis detected in session scope"},"partialFingerprints":{"scope":"session","target":"session:1ea8843fc09c3a6a","causes":["PmtudBlackhole","Congestion"]},"properties":{"evidence":{"segment_size":"1501"}}}]}]}
